# study-english-by-caption

./: README.md  docker-compose.yaml
backend/: add-poetry.sh  pyproject.toml  run.sh  wordhoard_error.yaml
backend/api/: db.py  main.py  migrate_db.py  mygrate.sh
backend/api/cruds/: favorite.py  favorite_video.py  video.py  vocabulary.py
backend/api/models/: models.py
backend/api/routers/: a.json  dictionary.py  favorite.py  google.py  video.py  vocabulary.py
backend/api/schemas/: caption.py  dictionary.py  favorite.py  favorite_video.py  video.py  vocabulary.py
backend/api/services/: dictionary.py  favorite.py  favorite_video.py  google.py  vocabulary.py
backend/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/Element/SearchButton/: SearchButton.css  SearchButton.tsx
frontend/src/components/Head/: Head.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/WordMeaning/: WordMeaning.tsx
frontend/src/features/Caption/: caption.css
frontend/src/features/Caption/api/: getCaption.ts  getChannelInformation.ts  getMeaning.ts
frontend/src/features/Caption/components/: Caption.tsx  CaptionContent.tsx  WordMeaning.tsx
frontend/src/features/Caption/types/: index.ts
frontend/src/features/Favorite/api/: addFavoriteVideo.ts  deleteFavoriteVideo.ts  getFavoriteVideoList.ts
frontend/src/features/Favorite/components/: Favorite.tsx
frontend/src/features/Favorite/types/: index.ts
frontend/src/features/Vocabulary/: vocabulary.css
frontend/src/routes/: index.tsx
(+8 files in other folders)
